--- a/apps/sync-service/package.json
+++ b/apps/sync-service/package.json
@@ -15,13 +15,16 @@
     "@fastify/cors": "^10.0.0",
     "@fastify/websocket": "^11.0.0",
     "fastify": "^5.2.0",
+    "jsonwebtoken": "^9.0.2",
     "lib0": "^0.2.114",
+    "rate-limiter-flexible": "^8.1.0",
     "ws": "^8.18.0",
     "y-protocols": "^1.0.6",
     "y-websocket": "^3.0.0",
     "yjs": "^13.6.27"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.19.24",
     "@types/ws": "^8.5.13",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
